# prod-ready-ml-mark

./: .pre-commit-config.yaml  pyproject.toml
notebooks/: 04_unit_tests.ipynb
src/animal_shelter/: __init__.py  data.py  features.py
tests/: test_data.py  test_features.py
