[project]
name = "animal-shelter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MarkdeKwaasteniet", email = "markdekwaasteniet@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
]

[project.scripts]
animal-shelter = "animal_shelter:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251201",
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
]

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  "D",  # pydocstyle
  "N",  # PEP8 names
  "I",  # isort
  "LOG" # use logger
]

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
     ".venv",
     "notebooks"
     ]
